# cradio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  info.txt
.github/workflows/: ci.yml  quality.yml  release.yml
src/: api.rs  app.rs  favorites.rs  main.rs  player.rs  ui.rs
