[package]
name = "cradio"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.13.1", features = ["full"] }
dns-lookup = "2"
directories = "5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Foundation", "Media_Core", "Media_Playback"] }
